footer,text responsive

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
@@ -17,14 +20,15 @@
                 <img src="./B12A02-Responsive-Flowers/assets/logo.png" alt="">
             </div>
             <div class="menu-container">
+
                 <ul>
                     <li class="li"><a href="">Home</a></li>
-                    <li><a href=""></a>Shop</li>
-                    <li><a href="">About us</a></li>
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">About us</a></li>
+                    <i class="fa-solid fa-cart-shopping"></i>
                     <h1>Cart ($56)</h1>
-
                 </ul>
+
 
             </div>
         </nav>
@@ -33,14 +37,15 @@
     <main>
         <!-- .................banner................... -->
 
-        <div class="banner">
+        <div style="margin-top: 100px;" class="banner">
 
-            <div class="banner-content  space-y-5 mt-20">
+            <div class="banner-content  space-y-5 ">
                 <h1 class="title"><span class="text-black">ALWAYS</span><span class="text-orange-500"> FRESH<br>
                         FLOWERS</span></h1>
-                <p class="space-x-5">Indulge your senses with the beauty and fragrance of <br> our fresh flower shop.
+                <p style="line-height: 30px;">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop.
                     From
-                    classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect
+                    classic roses to exotic  blooms, we offer a wide variety of fresh flowers that are perfect
                     for any occasion.</p>
 
 
@@ -54,7 +59,7 @@
 
         <!-- ...............Our Plants    ............... -->
 
-        <div class="plants-section">
+        <div style="margin-top: 100px;" class="plants-section">
             <div class="plants-content">
                 <h1><span class="text-orange-500">our</span> Plants</h1>
                 <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
@@ -68,9 +73,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4 >Lily Blossom</h4>
+                        <h3 style="font-weight: bold;">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -78,9 +83,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -88,9 +93,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -98,9 +103,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -108,9 +113,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -118,9 +123,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -128,9 +133,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -138,9 +143,9 @@
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
-                    <div class="card-content">
-                        <h3>Lily Blossom</h3>
-                        <h2>20 USD</h2>
+                    <div class="card-content-plant">
+                        <h4>Lily Blossom</h4>
+                        <h3 class="font-bold">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
                 </div>
@@ -151,30 +156,30 @@
 
         <!-- ...............Flower & Plants Lover.................... -->
 
-        <div class="flower-container">
-            <div class="flower-img ">
+        <!-- <div class="flower-container ">
+           <div class="flower-img ">
                 <div class="img-baged"><img src="./B12A02-Responsive-Flowers/assets/trusted-badge.png" alt=""></div>
                 <div class="img-flower"><img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt=""></div>
 
-            </div>
-            <div class="flower-content space-y-7">
-                <h1>Flower & Plants <br> Lover</h1>
-                <ul class="space-y-7">
-                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+            </div> 
+            <div class="flower-content ">
+                <h1 style="line-height: 70px;"  class="space-y-8 l">Flower & Plants <br> Lover</h1>
+                <ul class="space-y-10">
+                    <li class="list-disc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
                         to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                    <li class="list-disc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
                         to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
+                    <li class="list-disc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
                         to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
 
             </div>
-        </div>
+        </div> -->
 
         <!-- .......................Latest  Deals.......................... -->
 
         <div class="deals-section">
-            <div class="plants-content">
+            <div style="margin-bottom: 30px;" class="plants-content">
                 <h1><span class="text-orange-500">Latest </span> Deals</h1>
                 <p>Indulge your senses with the beauty and fragrance of our fresh flower shop. From <br> classic roses
                     to exotic blooms, we offer a wide variety of fresh.</p>
@@ -218,27 +223,22 @@
             </div>
 
 
-
         </div>
 
 
-
-
-
     </main>
+
     <footer>
-        <div class="colorful-section">
+        <div style="margin-top:100px ;" class="colorful-section">
+            <div class="colorful-content">
+                <h2>join the colorful bunch</h2>
 
-            
-                <div class="colorful-content">
-                    <h1 class="">join the colorful bunch</h1>
-
-                  <div class="btn-input">
-                    <input type="text" placeholder="write email">
+                <div class="btn-input">
+                    <input size="70" type="text" placeholder="write email">
                     <button>Subscribe</button>
-                  </div>
                 </div>
-            
+            </div>
+
 
         </div>
 
@@ -272,6 +272,8 @@
             </div>
         </div>
     </footer>
+
+
 
 
 
