nav,banner,logo,icon section responsive

--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
             <div class="menu-container">
 
                 <ul>
-                    <li class="li"><a href="">Home</a></li>
+                    <li class="li"><a href="#">Home</a></li>
                     <li><a href="#">Shop</a></li>
                     <li><a href="#">About us</a></li>
+
+                </ul>
+                <div class="cart">
                     <i class="fa-solid fa-cart-shopping"></i>
                     <h1>Cart ($56)</h1>
-                </ul>
+                </div>
 
 
             </div>
+
         </nav>
 
     </header>
@@ -45,7 +49,7 @@
                 <p style="line-height: 30px;">Indulge your senses with the beauty and fragrance of our fresh flower
                     shop.
                     From
-                    classic roses to exotic  blooms, we offer a wide variety of fresh flowers that are perfect
+                    classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect
                     for any occasion.</p>
 
 
@@ -74,7 +78,7 @@
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
                     <div class="card-content-plant">
-                        <h4 >Lily Blossom</h4>
+                        <h4>Lily Blossom</h4>
                         <h3 style="font-weight: bold;">20 USD</h3>
                     </div>
                     <div class="card-btn">ADD TO CART</div>
@@ -156,25 +160,25 @@
 
         <!-- ...............Flower & Plants Lover.................... -->
 
-        <!-- <div class="flower-container ">
+        <div  class="flower-container ">
            <div class="flower-img ">
                 <div class="img-baged"><img src="./B12A02-Responsive-Flowers/assets/trusted-badge.png" alt=""></div>
                 <div class="img-flower"><img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt=""></div>
 
             </div> 
             <div class="flower-content ">
-                <h1 style="line-height: 70px;"  class="space-y-8 l">Flower & Plants <br> Lover</h1>
+                <h1 style="line-height: 70px;"  class="space-y-8 ">Flower & Plants <br> Lover</h1>
                 <ul class="space-y-10">
-                    <li class="list-disc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
-                        to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="list-disc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
-                        to exotic blooms, we offer a wide variety of fresh.</li>
-                    <li class="list-disc">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses
-                        to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li style="line-height: 30px;" class="list-disc ">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
+                        to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li style="line-height: 30px;" class="list-disc ">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
+                        to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                     <li style="line-height: 30px;" class="list-disc ">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
+                        to exotic blooms, we offer a wide variety <br> of fresh.</li>
                 </ul>
 
             </div>
-        </div> -->
+        </div>
 
         <!-- .......................Latest  Deals.......................... -->
 
@@ -194,8 +198,8 @@
                     <div class="deals-card bloom-card">
                         <img src="./B12A02-Responsive-Flowers/assets/deal-bloom.png" alt="Bloom Plant">
                         <div class="card-content">
-                            <h3>60% Off | Bloom Plant</h3>
-                            <a href="#">Shop Now</a>
+                            <h3 style="font-size: 20px;">60% Off | Bloom Plant</h3>
+                            <a style="font-size: 16px;" href="#">Shop Now</a>
                         </div>
                     </div>
 
@@ -203,8 +207,8 @@
                     <div class="deals-card small-card">
                         <img src="./B12A02-Responsive-Flowers/assets/deal-ana.png" alt="Ana Plant">
                         <div class="card-content">
-                            <h3>30% Off | Ana Plant</h3>
-                            <a href="#">Shop Now</a>
+                            <h3 style="font-size: 20px;">30% Off | Ana Plant</h3>
+                            <a style="font-size: 16px;" href="#">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -214,8 +218,8 @@
                     <div class="deals-card zabo-card">
                         <img src="./B12A02-Responsive-Flowers/assets/deal-zabo.png" alt="Zabo Plant">
                         <div class="card-content">
-                            <h3>25% Off | Zabo Plant</h3>
-                            <a href="#">Shop Now</a>
+                            <h3 style="font-size: 30px;">25% Off | Zabo Plant</h3>
+                            <a style="font-size: 20px;" href="#">Shop Now</a>
                         </div>
                     </div>
                 </div>
