chelleng section design done

--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@
                 <div class="img-flower"><img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt=""></div>
 
             </div> 
-            <div class="flower-content ">
-                <h1 style="line-height: 70px;"  class="space-y-8 ">Flower & Plants <br> Lover</h1>
-                <ul class="space-y-10">
-                    <li style="line-height: 30px;" class="list-disc ">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
+            <div class="flower-content">
+                <h1 >Flower & Plants <br> Lover</h1>
+                <ul>
+                    <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
                         to exotic blooms, we offer a wide variety <br> of fresh.</li>
-                    <li style="line-height: 30px;" class="list-disc ">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
+                   <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
                         to exotic blooms, we offer a wide variety <br> of fresh.</li>
-                     <li style="line-height: 30px;" class="list-disc ">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
+                    <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
                         to exotic blooms, we offer a wide variety <br> of fresh.</li>
                 </ul>
 
