--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                 <div class="bloom-ana">
 
                     <div class="deals-card bloom-card">
-                        <img src="./B12A02-Responsive-Flowers/assets/deal-bloom.png" alt="Bloom Plant">
+                        <img class="overly" src="./B12A02-Responsive-Flowers/assets/deal-bloom.png" alt="Bloom Plant">
+                        <div class="overly"></div>
                         <div class="card-content">
                             <h3 style="font-size: 20px;">60% Off | Bloom Plant</h3>
                             <a style="font-size: 16px;" href="#">Shop Now</a>
@@ -205,7 +206,7 @@
 
 
                     <div class="deals-card small-card">
-                        <img src="./B12A02-Responsive-Flowers/assets/deal-ana.png" alt="Ana Plant">
+                        <img class="overly" src="./B12A02-Responsive-Flowers/assets/deal-ana.png" alt="Ana Plant">
                         <div class="card-content">
                             <h3 style="font-size: 20px;">30% Off | Ana Plant</h3>
                             <a style="font-size: 16px;" href="#">Shop Now</a>
@@ -216,7 +217,7 @@
 
                 <div class="right-box">
                     <div class="deals-card zabo-card">
-                        <img src="./B12A02-Responsive-Flowers/assets/deal-zabo.png" alt="Zabo Plant">
+                        <img class="overly" src="./B12A02-Responsive-Flowers/assets/deal-zabo.png" alt="Zabo Plant">
                         <div class="card-content">
                             <h3 style="font-size: 30px;">25% Off | Zabo Plant</h3>
                             <a style="font-size: 20px;" href="#">Shop Now</a>
