margin padding all section update

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                 <div class="img-flower"><img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt=""></div>
 
             </div> 
-            <div class="flower-content">
+            <div  class="flower-content space-y-8">
                 <h1 >Flower & Plants <br> Lover</h1>
-                <ul>
+                <ul style="line-height: 30px;" class="space-y-8" >
                     <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
                         to exotic blooms, we offer a wide variety <br> of fresh.</li>
                    <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
