font size update

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
 
             </div> 
             <div  class="flower-content space-y-8">
-                <h1 >Flower & Plants <br> Lover</h1>
+                <h1 >Flower & Plants Lover</h1>
                 <ul style="line-height: 30px;" class="space-y-8" >
-                    <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
-                        to exotic blooms, we offer a wide variety <br> of fresh.</li>
-                   <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
-                        to exotic blooms, we offer a wide variety <br> of fresh.</li>
-                    <li >Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses
-                        to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic  roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                   <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic <br> roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic  roses
+                        to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
 
             </div>
@@ -234,7 +234,7 @@
     </main>
 
     <footer>
-        <div style="margin-top:100px ;" class="colorful-section">
+        <div style="margin-top:50px ;" class="colorful-section">
             <div class="colorful-content">
                 <h2>join the colorful bunch</h2>
 
