--- a/index.html
+++ b/index.html
@@ -171,8 +171,9 @@
                 <ul style="line-height: 30px;" class="space-y-8" >
                     <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic  roses
                         to exotic blooms, we offer a wide variety of fresh.</li>
-                   <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic <br> roses
+                         <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic  roses
                         to exotic blooms, we offer a wide variety of fresh.</li>
+                
                     <li >Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic  roses
                         to exotic blooms, we offer a wide variety of fresh.</li>
                 </ul>
