chellenge part shadow,boder

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="plants-container">
 
-                <div class="card">
+                <div class="card first-child">
                     <div class="card-img">
                         <img src="./B12A02-Responsive-Flowers/assets/sample-flower-image.png" alt="">
                     </div>
@@ -163,7 +163,7 @@
         <div  class="flower-container ">
            <div class="flower-img ">
                 <div class="img-baged"><img src="./B12A02-Responsive-Flowers/assets/trusted-badge.png" alt=""></div>
-                <div class="img-flower"><img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt=""></div>
+                <div class="img-flower first-child"><img src="./B12A02-Responsive-Flowers/assets/flower-store.png" alt=""></div>
 
             </div> 
             <div  class="flower-content space-y-8">
@@ -197,7 +197,7 @@
                 <div class="bloom-ana">
 
                     <div class="deals-card bloom-card">
-                        <img class="overly" src="./B12A02-Responsive-Flowers/assets/deal-bloom.png" alt="Bloom Plant">
+                        <img class="overly first-child" src="./B12A02-Responsive-Flowers/assets/deal-bloom.png" alt="Bloom Plant">
                         <div class="overly"></div>
                         <div class="card-content">
                             <h3 style="font-size: 20px;">60% Off | Bloom Plant</h3>
