--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                         <img class="overly first-child" src="./B12A02-Responsive-Flowers/assets/deal-bloom.png" alt="Bloom Plant">
                         <div class="overly"></div>
                         <div class="card-content">
-                            <h3 style="font-size: 20px;">60% Off | Bloom Plant</h3>
-                            <a style="font-size: 16px;" href="#">Shop Now</a>
+                            <h3 >60% Off | Bloom Plant</h3>
+                            <a href="#">Shop Now</a>
                         </div>
                     </div>
 
@@ -209,8 +209,8 @@
                     <div class="deals-card small-card">
                         <img class="overly" src="./B12A02-Responsive-Flowers/assets/deal-ana.png" alt="Ana Plant">
                         <div class="card-content">
-                            <h3 style="font-size: 20px;">30% Off | Ana Plant</h3>
-                            <a style="font-size: 16px;" href="#">Shop Now</a>
+                            <h3 >30% Off | Ana Plant</h3>
+                            <a  href="#">Shop Now</a>
                         </div>
                     </div>
                 </div>
@@ -220,8 +220,8 @@
                     <div class="deals-card zabo-card">
                         <img class="overly" src="./B12A02-Responsive-Flowers/assets/deal-zabo.png" alt="Zabo Plant">
                         <div class="card-content">
-                            <h3 style="font-size: 30px;">25% Off | Zabo Plant</h3>
-                            <a style="font-size: 20px;" href="#">Shop Now</a>
+                            <h3 class="head">25% Off | Zabo Plant</h3>
+                            <a class="head-1"  href="#">Shop Now</a>
                         </div>
                     </div>
                 </div>
